Navigation Drawer Implementation completed.

--- a/NavigationDrawerWorkSpace/app/src/main/res/values/strings.xml
+++ b/NavigationDrawerWorkSpace/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NavigationDrawer</string>
+<!-- This is used to create the Drawer action open and close for Blind people-->
+    <string name="navigation_draw_open">Navigation Drawer Open</string>
+    <string name="navigation_draw_close">Navigation Drawer Close</string>
 </resources>
